@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 1.32 Not Released
  - Fix Mojo::Home::rel_dir is DEPRECATED in favor of Mojo::Hom::rel_file #112
+ - Disable "Reloader" pipe, unless in development
 
 1.31 2017-01-04T14:19:34+0100
  - Fix generating favicons once with MOJO_ASSETPACK_LAZY
